<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:fresco="http://schemas.android.com/apk/res-auto"
                                   android:id="@+id/movieCard"
                                   android:layout_width="match_parent"
                                   android:layout_height="match_parent"
                                   android:background="@color/colorCardBackground"
                                   android:visibility="visible"
                                   app:cardBackgroundColor="@color/colorCardBackground"
                                   app:cardPreventCornerOverlap="true"
                                   app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieCardConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/image_border_rectangle"
            android:contentDescription="@string/movie_backdrop_label"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/txtMovieTitle"
            app:layout_constraintDimensionRatio="H,2:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1.0"
            app:layout_goneMarginBottom="8dp"
            fresco:fadeDuration="1000"
            fresco:failureImage="@drawable/error_during_download"
            fresco:placeholderImage="@color/colorFrescoPlaceholder"/>

        <TextView
            android:id="@+id/txtMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="3"
            android:minLines="2"
            android:singleLine="false"
            android:text="@string/unknown_movie_title"
            android:textColor="@color/colorText"
            app:layout_goneMarginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtCharacterOrJob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:layout_constraintVertical_chainStyle="spread_inside"/>

        <TextView
            android:id="@+id/txtCharacterOrJob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/unknown_character_or_job"
            android:textColor="@color/colorText"
            app:layout_goneMarginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtMovieReleaseDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMovieTitle"/>

        <TextView
            android:id="@+id/txtMovieReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/unknown_movie_release_date"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCharacterOrJob"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>